setup scss module for typesrcipt

--- a/src/components/SocialLinks/SocialLinks.module.scss
+++ b/src/components/SocialLinks/SocialLinks.module.scss
@@ -1,4 +1,4 @@
-.social-links {
+.socialLinks {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -8,11 +8,11 @@
   margin: 15px 0;
 }
 
-.social-links > div {
+.socialLinks > div {
   margin: 5px 15px;
   cursor: pointer;
 }
 
-.share-count {
+.shareCount {
   text-align: center;
 }
