--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,7 +1,8 @@
-.page-links {
+.about {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  align-content: center;
   align-items: center;
-  max-width: 100%;
+  min-height: 300px;
+  color: red;
 }
