--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
   padding: 10px 5px 5px;
 }
 
-.notice-container {
+.noticeContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -14,12 +14,12 @@
 }
 
 @media (max-width: 640px - 1px) {
-  .notice-container {
+  .noticeContainer {
     justify-content: space-around;
   }
 }
 
-.notice-container h4 {
+.noticeContainer h4 {
   text-align: center;
   margin: 0;
 }
