--- a/src/components/PageLinks/PageLinks.module.scss
+++ b/src/components/PageLinks/PageLinks.module.scss
@@ -1,7 +1,7 @@
-.about {
+.pageLinks {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-content: center;
   align-items: center;
-  min-height: 300px;
+  max-width: 100%;
 }
