--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -2,38 +2,28 @@
   font-family: "Lovelyn";
   src: url("../../static/fonts/lovelyn/LovelynRegular.woff") format("woff");
 }
+
 @font-face {
   font-family: "Athene";
   src: url("../../static/fonts/athene/Athene.woff") format("woff");
 }
+
 @font-face {
   font-family: "Medio";
   src: url("../../static/fonts/medio/Medio.woff") format("woff");
 }
 
-* {
-  box-sizing: border-box;
+.grid {
+  max-width: 1600px;
+  padding: 0 90px;
+  margin: 0 auto;
+  position: relative;
 }
 
-html {
-  height: 100%;
+.ant-carousel .slick-slide img {
+  margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  min-height: 100%;
-  min-width: 100%;
-}
-
-#___gatsby #gatsby-focus-wrapper {
-  min-height: 100vh;
-  min-width: 100vw;
-}
-
-.layout-container {
-  min-height: 100vh;
-  min-width: 100vw;
-  display: flex;
-  padding: 20px;
+  background-color: #f6f0ec;
 }
