--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -52,7 +52,7 @@
     width: 100%;
     z-index: 1;
 
-    a {
+    a, h1 {
         color: white;
         transition: all 0.5s;
     }
@@ -66,6 +66,7 @@
 .logoContainer {
     position: absolute;
     margin-top: 10px;
+    z-index: 2;
 
     h1 {
         color: #6f7171;
