--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,23 +1,17 @@
-.container {
-    .column {
-        width: 50%;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 20px;
-        box-sizing: border-box;
-        display: inline-block;
-        vertical-align: top;
-        *display: block;
-        zoom: 1;
-    }
-    img {
-        width: 100%;
-        height: 100%;
-    }
-    .left {
-        float: left;        
-    }
-    .right {
-        float: right;
-    }
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.info {
+    padding: 30px;
+    min-height: calc(100vh - 240px);
+}
+
+.info {
+    position: fixed;
+    bottom: 0;
+    box-sizing: border-box;
+    width: calc(25vw - 20px);
+    text-align: center;
 }
