--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -16,15 +16,16 @@
   justify-content: center;
   .info {
     top: auto;
-    bottom: 0;
     position: absolute;
   }
 }
-
+.isAtTop .info {
+  position: relative;
+}
 .info {
   position: fixed;
-  top: 200px;
   box-sizing: border-box;
+  bottom: 0;
   width: calc(50vw - 100px);
   max-width: 600px;
   text-align: center;
@@ -64,7 +65,6 @@
   height: 1px;
   width: 100%;
 }
-
 .borderBlock {
   :global(.ant-row-flex) {
     border-top: 1px solid #9d9da1;
