--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,3 @@
-$font-header: "Lovelyn";
-$font-body: "Apple Garamond Light"; // Calluna, Garamond, medio
+$font-header: "FreightDispProLight";
+$font-body: "FreightTextBook"; // Calluna, Garamond, medio
 $font-sans-serif: "Roboto";// Open sans, raleway
