Header, front page mobile

--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -1,15 +1,19 @@
-.card {
-    margin: 10px;
-    flex-basis: 30%;
-    img {
-        width: 100%;
-        display: block;
-    }
-    .description {
-        display: flex;
-        padding: 5px 0;
-        justify-content: space-between;
-        align-items: baseline;
-    }
+@media screen and (max-width: 769px) {
+  .list {
+    margin: 20px;
+  }
 }
-
+.card {
+  margin: 10px;
+  flex-basis: 30%;
+  img {
+    width: 100%;
+    display: block;
+  }
+  .description {
+    display: flex;
+    padding: 5px 0;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+}
