--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,7 +24,6 @@
   bottom: 0;
   flex-grow: 1;
   left: 0;
-  padding: 0 10px;
   width: 100%;
   z-index: 1;
   border-top: none;
@@ -39,14 +38,14 @@
     flex-wrap: wrap;
     justify-content: center;
     list-style: none;
-    margin: 0;
+    margin: 0 -10px;
     padding: 0;
     position: relative;
   }
 }
 
+
 .headerContent.fixed {
-  padding: 0;
   height: 80px;
   background-color: #e6bfbcf2;
   left: 0;
@@ -67,13 +66,13 @@
   }
 
   .logoContainer h1 {
-    font-size: 2.2em;
+    font-size: 2.5em;
     transition: font-size 0.5s ease-in-out;
   }
 }
 
 @media screen and (max-width: 770px) {
-  .headerContent.fixed {
+  .headerContent {
     padding: 0 20px;
   }
 }
