--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,9 @@
 }
 
 .headerContent {
+  max-width: 1600px;
+  padding: 0 90px;
+  margin: 0 auto;
   align-items: center;
   justify-content: center;
   display: flex;
