Gatsby Image implement; Rewrite HOC Reveal Animation into Composition component

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,3 +1,13 @@
+.container {
+  padding: 0 90px;
+}
+
+@media screen and (max-width: 769px) {
+  .container {
+    padding: 0;
+  }
+}
+
 .infoContainer {
   position: relative;
 }
