--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   text-align: center;
-  background: #cd8189;
+  background: #C79479;
   padding: 20px;
   color: white;
   position: relative;
