--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -40,7 +40,8 @@ a {
 /* //Typograhpy */
 
 .darkTone {
-  background: #e6bfbc;
+  // background: #edc4ad;
+  background: #e8c7b5;
 
   h1,
   h2,
@@ -52,6 +53,10 @@ a {
   a,
   span {
     color: #fff;
+  }
+
+  p {
+    font-size: 1.3em;
   }
 }
 
