Fix 3rd product offset by adding type flex;Slider from markdown; Move products to a folder;

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -81,10 +81,14 @@
     flex-wrap: wrap;
     justify-content: center;
     list-style: none;
-    margin: 0 -10px;
+    margin: 0;
     padding: 0;
     position: relative;
   }
+}
+
+:global(.grid).menu {
+  padding: 0 80px;
 }
 
 .logoContainer {
