--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -134,6 +134,12 @@ hr.divider {
   background: none;
 }
 
+@media screen and (max-width: 769px) {
+  hr.divider {
+    padding-top: 20px;
+  }
+}
+
 .grid {
   max-width: 1600px;
   margin: 0 auto;
@@ -141,8 +147,6 @@ hr.divider {
   position: relative;
   .gridTitle {
     flex-basis: 100%;
-    padding-left: 10px;
-    padding-bottom: 20px;
   }
 }
 
