--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,104 +1,104 @@
 .header {
-  height: 164px;
-}
-
-@media screen and (max-width: 769px) {
-  .header {
-    height: 80px;
-  }
-}
-
-.headerContent {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  height: 80px;
-  padding-top: 20px;
-  position: relative;
+  position: fixed;
   width: 100%;
-  align-items: center;
-  transition: background-color 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
-    height 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) 0s, padding 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) 0s;
-  a {
-    padding: 10px;
-    color: #9d9da1;
-  }
-  &.fixed {
-    padding-top: 0;
-    background-color: #e8c7b5f2;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-
-    a,
-    h1 {
-      color: white;
-      transition: all 0.5s;
-    }
-
-    svg {
-      color: white;
-      transition: all 0.5s;
-    }
-
-    .logoContainer h1 {
-      font-size: 2.5em;
-      transition: font-size 0.5s ease-in-out;
-    }
-  }
-  &.mobile {
-    padding: 0 20px;
-    height: 50px;
-    a {
-      padding: 0;
-      margin: 0;
-    }
-
-    .logoContainer h1 {
-      font-size: 2em;
-      margin: 0;
-    }
-  }
-}
-
-.menu {
-  bottom: 0;
-  flex-grow: 1;
+  top: 0;
   left: 0;
-  width: 100%;
-  z-index: 1;
-  border-top: none;
-  background: transparent;
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  transition: none;
-
-  .menuLink {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
+  z-index: 5;
+  display: block;
+  background: #fff;
+  box-shadow: 0 -1px #e3e3e3 inset;
+  transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  a,
+  h1 {
+    color: #454545;
   }
-}
 
-:global(.grid).menu {
-  padding: 0 80px;
-}
-
-.logoContainer {
-  position: absolute;
-  margin-top: 10px;
-  z-index: 2;
+  a {
+    font-size: 16px;
+  }
 
   h1 {
-    color: #6f7171;
-    font-family: $font-header;
+    font-size: 32px;
+  }
+}
+
+.transparent {
+  background-color: transparent;
+  box-shadow: 0 -1px rgba(255, 255, 255, 0.25) inset;
+  div,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  a,
+  p,
+  span {
+    color: #fff;
+  }
+  .menuToggle {
+    span {
+      background: #fff;
+    }
+  }
+}
+
+.container {
+  padding: 15px 18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: opacity 0.3s ease-in-out;
+  .block {
+    display: flex;
+    align-items: center;
+    h1 {
+      line-height: 32px;
+    }
+    &:last-child {
+      justify-content: flex-end;
+    }
+  }
+  .fill {
+    flex: 1 0 0;
+  }
+
+  ul,
+  h1 {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 577px) {
+  .container {
+    padding: 18px 30px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .container {
+    padding: 18px 50px;
+  }
+}
+
+.menuToggle {
+  span {
+    display: block;
+    width: 16px;
+    height: 2px;
+    background: #707272;
+    margin-bottom: 3px;
+    transition: transform 0.6s ease-in-out;
+  }
+
+  &:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  &:nth-last-child(2) {
+    transform-origin: 0% 100%;
   }
 }
 
