--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -45,7 +45,7 @@
 }
 
 .container {
-  padding: 15px 18px;
+  padding: 5px 18px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -72,14 +72,18 @@
 }
 
 @media screen and (min-width: 577px) {
-  .container {
-    padding: 18px 30px;
+  .container,
+  :global(.ant-drawer-close),
+  :global(.ant-drawer-body) {
+    padding: 8px 30px;
   }
 }
 
 @media screen and (min-width: 769px) {
-  .container {
-    padding: 18px 50px;
+  .container,
+  :global(.ant-drawer-close),
+  :global(.ant-drawer-body) {
+    padding: 8px 50px;
   }
 }
 
