--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -23,9 +23,10 @@
   cursor: pointer;
   text-align: center;
   z-index: 1;
-  vertical-align: middle;
   line-height: 0;
   overflow: hidden;
+  box-shadow: 0 2px 10px rgba(54, 54, 54, 0.15);
+  vertical-align: middle;
 
   svg {
     height: 18px;
