Calendar: valid slot check; Form: timePicker binding

--- a/src/components/Booking/BookingForm/BookingForm.module.scss
+++ b/src/components/Booking/BookingForm/BookingForm.module.scss
@@ -1,12 +1,5 @@
-.slot {
-  padding-top: 20px;
-  span {
-    font-size: 12px;
-  }
-}
-
-.calendar {
-  :global(.ant-fullcalendar-value) {
-    font-size: 12px;
+.container {
+  :global(.ant-form-item-label) label {
+    color: #727272;
   }
 }
