--- a/src/components/Booking/Details/Details.module.scss
+++ b/src/components/Booking/Details/Details.module.scss
@@ -1,3 +1,12 @@
 .container {
-    min-height: calc(100vh - 400px - 160px);
+  min-height: calc(100vh - 400px - 160px);
+  :global(.anticon) {
+    vertical-align: -0.2em;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .container {
+    min-height: calc(100vh - 60px - 160px);
+  }
 }
