--- a/src/components/Booking/Details/Details.module.scss
+++ b/src/components/Booking/Details/Details.module.scss
@@ -10,3 +10,12 @@
     min-height: calc(100vh - 60px - 160px);
   }
 }
+
+.details {
+  font-family: $font-body;
+  &,
+  :global(.ant-descriptions-title),
+  :global(.ant-descriptions-item-label) {
+    color: #707272;
+  }
+}
