Instagram block; 3 Hero with text

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   text-align: center;
-  background: #C79479;
+  background: #f6f0ec;
+  // background: #C79479;
   padding: 20px;
-  color: white;
   position: relative;
 }
