--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -7,6 +7,17 @@
   min-height: calc(100vh - 80px);
   height: 100px;
   padding: 10px;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.textWrapper {
+  position: relative;
 }
 
 .scrollButton {
@@ -33,3 +44,4 @@
     width: 18px;
   }
 }
+
