--- a/src/components/SliderArrow/SliderArrow.module.scss
+++ b/src/components/SliderArrow/SliderArrow.module.scss
@@ -1,11 +1,48 @@
-.arrow {
-    &:global(.slick-next) {
-        right: 10px;
-        opacity: 0.6;
-    }
+// .arrow {
+//     &:global(.slick-next) {
+//         right: 10px;
+//         opacity: 0.6;
+//     }
 
-    &:global(.slick-prev) {
-        left: 10px;
-        opacity: 0.6;
+//     &:global(.slick-prev) {
+//         left: 10px;
+//         opacity: 0.6;
+//     }
+// }
+.scrollButton {
+  position: absolute;
+  top: calc(50% - 20px);
+  bottom: -20px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 50%;
+  background: #fff;
+  color: #c1a081;
+  cursor: pointer;
+  text-align: center;
+  z-index: 1;
+  line-height: 0;
+  overflow: hidden;
+  box-shadow: 0 2px 10px rgba(54, 54, 54, 0.15);
+  vertical-align: middle;
+
+  svg {
+    height: 18px;
+    width: 18px;
+  }
+
+  &.next {
+    right: 10px;
+    svg {
+      transform: rotate(-90deg);
     }
+  }
+
+  &.prev {
+    left: 10px;
+    svg {
+      transform: rotate(90deg);
+    }
+  }
 }
