--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -20,9 +20,10 @@ h4,
 h5,
 h6 {
   font-family: $font-header;
-  font-weight: 300;
+  font-weight: 400;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
+  letter-spacing: 0.8px;
 }
 
 p,
@@ -91,7 +92,7 @@ blockquote cite:before {
 }
 
 .uppercase {
-  text-transform: uppercase!important;
+  text-transform: uppercase !important;
 }
 /* //Typograhpy */
 
@@ -136,9 +137,9 @@ main {
   a,
   p,
   li {
-    color: #707272;
+    color: #454545;
     &.grayText {
-      color: #9d9da1;
+      color: #727272;
     }
   }
 
@@ -152,7 +153,7 @@ main {
     a,
     p,
     span {
-      color: #9d9da1;
+      color: #727272;
     }
   }
 }
