--- a/src/components/CampaignModal/CampaignModal.module.scss
+++ b/src/components/CampaignModal/CampaignModal.module.scss
@@ -2,7 +2,7 @@
   height: 100%;
   text-align: center;
   :global(.ant-col) {
-    padding: 40px;
+    padding: 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -14,8 +14,8 @@
   h4,
   p {
     font-family: $font-body;
-    color: #333;
     font-weight: 600;
+    color: rgba(0, 0, 0, 0.85);
   }
   span {
     font-family: $font-sans-serif;
