Floating button;Minimize header when scrolling down on mobile;

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,7 @@
 .header {
+  &.downScroll {
+    top: -43px;
+  }
   &.homepage {
     position: fixed;
   }
@@ -10,7 +13,7 @@
   display: block;
   background: #fff;
   box-shadow: 0 -1px #e3e3e3 inset;
-  transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  transition: top 0.3s ease-in, background 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
   a,
   h1 {
     color: #454545;
