--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -17,6 +17,13 @@
     padding: 5px 0;
     justify-content: space-between;
     align-items: baseline;
+    &.vertical {
+      flex-direction: column;
+      align-items: center;
+      h1, h2, h3 {
+        margin-bottom: 0;
+      }
+    }
   }
 }
 
