--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,3 @@
-$font-header: "FreightDispProLight";
-$font-body: "FreightTextBook"; // Calluna, Garamond, medio
-$font-sans-serif: "Roboto";// Open sans, raleway
+$color-background: #f6f0ec;
+$font-color: #454545;
+$font-color-gray: #727272;
