--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -175,6 +175,7 @@ hr.divider {
   max-width: 1600px;
   &.narrow {
     max-width: 700px;
+    padding: 0;
   }
   margin: 0 auto;
   padding: 0 90px;
