Clean up Row Col; Use new CSS breakpoint

--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -172,21 +172,18 @@ hr.divider {
 }
 
 .grid {
-  max-width: 1600px;
+  max-width: 1200px;
   &.narrow {
-    max-width: 700px;
-    padding: 10px;
+    max-width: 900px;
   }
   margin: 0 auto;
-  padding: 0 90px;
+  padding: 0;
   position: relative;
   &.darkTone {
     // background: #edc4ad;
     background: #e8c7b5;
   }
 }
-
-
 
 .gridTitle {
   flex-basis: 100%;
@@ -238,10 +235,10 @@ button:focus {
 // /* Global Layout */
 
 /* Responsive */
-
 @media screen and (max-width: 769px) {
   .grid {
     width: 100%;
+    padding: 0;
     .gridTitle {
       padding: 10px 0;
     }
