--- a/src/components/Booking/Booking.module.scss
+++ b/src/components/Booking/Booking.module.scss
@@ -1,7 +1,5 @@
 .container {
-  li {
-    padding-bottom: 10px;
-  }
+  margin: 0 10px;
 }
 
 .slot {
@@ -10,13 +8,31 @@
     font-size: 12px;
   }
 }
-
-.calendar {
-  :global(.ant-fullcalendar-value) {
-    font-size: 12px;
+.bullet {
+  text-align: justify;
+  @include phone-only {
+    padding-left: 20px;
   }
-  :global(.ant-fullcalendar-disabled-cell .ant-fullcalendar-value) {
-    width: 24px;
-    height: 24px;
+  li {
+    padding-bottom: 10px;
+  }
+}
+.timeSelectContainer {
+  display: flex;
+  flex-wrap: wrap;
+  & > div {
+    flex: 1 1 100%;
+    @include tablet-potrait-up {
+      flex: 1 1 50%;
+    }
+  }
+  .calendar {
+    :global(.ant-fullcalendar-value) {
+      font-size: 12px;
+    }
+    :global(.ant-fullcalendar-disabled-cell .ant-fullcalendar-value) {
+      width: 24px;
+      height: 24px;
+    }
   }
 }
