--- a/src/components/Booking/BookingForm/BookingForm.module.scss
+++ b/src/components/Booking/BookingForm/BookingForm.module.scss
@@ -1,5 +1,17 @@
 .container {
+  margin: 0 auto;
+  max-width: 700px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  :global(.ant-row) {
+    flex: 1 1 100%;
+  }
   :global(.ant-form-item-label) label {
     color: #727272;
   }
+}
+
+.button {
+  align-self: flex-end;
 }
