--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,20 @@
 $color-background: #f6f0ec;
 $font-color: #454545;
 $font-color-gray: #727272;
+
+// 3 break point: 600, 900, 1200
+@mixin phone-only {
+    @media (max-width: 599px) { @content; }
+}
+
+@mixin tablet-potrait-up {
+    @media (min-width: 600px) { @content; }
+}
+
+@mixin tablet-landscape-up {
+    @media (min-width: 900px) { @content; }
+}
+
+@mixin desktop-up {
+    @media (min-width: 1200px) { @content; }
+}
