--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -2,13 +2,16 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0;
+
   @include tablet-potrait-up {
     display: flex;
     flex-wrap: wrap;
   }
+
   .flexBlock {
     text-align: center;
     flex: 1 1 50%;
+
     @include phone-only {
       flex: 1 1 100%;
     }
@@ -19,34 +22,35 @@
   position: relative;
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  @media (max-width: 360px) {
-    padding: 80px 0;
-  }
-  padding: 80px 20px;
-  @include tablet-landscape-up {
-    padding: 80px 40px;
-  }
-  .info {
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    @include tablet-potrait-up {
-      padding: 20px;
-    }
-    @include tablet-landscape-up {
-      padding: 40px;
-    }
-    @include desktop-up {
-      padding: 80px;
-    }
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+}
 
-    .description {
-      text-align: justify;
-      color: $font-color-gray;
+.info {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+
+  @include tablet-potrait-up {
+    padding: 20px;
+  }
+
+  @include tablet-landscape-up {
+    padding: 40px;
+  }
+
+  @include desktop-up {
+    padding: 80px;
+  }
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .description {
+    text-align: justify;
+    color: $font-color-gray;
+
+    @include phone-only {
+      padding: 10px;
     }
   }
 }
@@ -58,25 +62,30 @@
     flex-direction: row;
     display: flex;
     justify-content: center;
+
     .info {
       bottom: 0;
       top: auto;
       position: absolute;
     }
   }
+
   .info {
     position: fixed;
     box-sizing: border-box;
     top: 50px;
-    width: calc(50vw - 100px);
+    width: calc(50vw - 40px);
     max-width: 600px;
     min-height: calc(100vh - 240px);
+
     .name {
       margin: 0;
     }
+
     .price {
       padding-bottom: 30px;
     }
+
     .checkSize {
       width: 100%;
       display: block;
@@ -85,12 +94,15 @@
     }
   }
 }
+
 .imageContainer {
   position: relative;
+
   img {
     width: 100%;
     height: 100%;
   }
+
   .sensor {
     top: 50px;
   }
@@ -101,10 +113,10 @@
   position: absolute;
   z-index: 1;
   height: 1px;
-  width: 100%;
+  width: 50px;
 }
 
-.borderBlock > div {
+.borderBlock>div {
   border-top: 1px solid #9d9da1;
   padding: 15px 0;
 }
